# hypotenuse

./: .gitignore  404.html  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python-app.yml
docs/: index.md
src/hypotenuse/: pythagos.py
tests/: test_pythagos.py
